# learning

kalman_filters/: README.md  diff_freq_kf.py  simple_ekf.py  simple_kf.py  simple_kf_2.py  simple_kf_3.py
learning_cuda/: CMakeLists.txt
learning_cuda/src/: matrix_multiply.cu  reduce_sum.cu  sum.cu  transpose.cu
models_in_cpp/: README.md
models_in_cpp/classifier_free_guidance/: net_test.cpp  network.cpp  network.h  sampler.cpp  trainer.cpp  trainer.h
models_in_cpp/classifier_guidance/: CMakeLists.txt  diffusion_utils.h  net_test.cpp  network.cpp  network.h  sampler.cpp  trainer.cpp  trainer.h
models_in_cpp/cmake/: Dependencies.cmake
models_in_cpp/data_loaders/: CMakeLists.txt  mnist_loader.cpp  mnist_loader.hpp
models_in_cpp/ddpm/: CMakeLists.txt  diffusion_utils.h  net_test.cpp  network.cpp  network.h  sampler.cpp  train.cpp  trainer.cpp  trainer.h  unet_mnist.hpp
models_in_cpp/ddpm_segformer/: CMakeLists.txt  diffusion_utils.h  net_test.cpp  network.cpp  network.h  trainer.cpp  trainer.h
models_in_cpp/guided_diffusion/: CMakeLists.txt  net_test.cpp  network.cpp  network.h  sampler.cpp  trainer.cpp  trainer.h
models_in_cpp/simple_ddpm/: diffusion_utils.h  net_test.cpp  network.cpp  network.h  sampler.cpp  train.cpp  trainer.cpp  trainer.h
models_in_cpp/vdm/: CMakeLists.txt  net_test.cpp  network.cpp  network.h  sampler.cpp  train.cpp  trainer.cpp  trainer.h
models_in_cpp/vit/: .gitignore  CMakeLists.txt  data_loader.h  infer.cpp  network_utils.h  train.cpp  trainer.cpp  trainer.h  vit.cpp  vit.h
models_in_cpp2/vit/: CMakeLists.txt
optimal_control/: CMakeLists.txt
optimal_control/src/minimization/: al_gn_solver.cpp  al_gn_solver_complex.cpp  backtracking_damped_newton.cpp  equality_constraints.cpp  inequality_constraints.cpp  merit_functions.cpp  nd_backtracking_damped_newton.cpp  newton.cpp  plot_2d_al.py  plot_2d_constrained_newton.py  plot_2d_newton.py  plot_newton.py  regularized_newton.cpp  visualize_al_2d.py
optimal_control/src/mpc/: bi_solver.cpp  inverted_pendulum.cpp  ip_solver.cpp  pid.cpp  simulate_ip.cpp  tools.cpp
optimal_control/src/root_finding/: backward_euler_pendulum.cpp  plot_dynamics.py
ransac_cuda/: CMakeLists.txt
ransac_cuda/example/: adam_test.cpp  model_test.cpp
ransac_cuda/include/: adam.h  model.h
ransac_cuda/src/cpu/: adam.cpp  model.cpp
ransac_cuda/src/cuda/: adam.cu  model.cu
ransac_cuda/src/cuda/include/: common.hpp
reeds_shepp_cuda/cpu/: CMakeLists.txt  rs.h  rs_path_vis.py  test_rs.cpp
reeds_shepp_cuda/cuda/: rs_cuda.cu  rs_cuda.h
vit/: network_utils.h  train.cpp  trainer.cpp  vit.cpp
